Finalized installer. Added Service configuration file, first testing passed code is performing well

--- a/WavemeterServiceInstaller/Product.wxs
+++ b/WavemeterServiceInstaller/Product.wxs
@@ -1,29 +1,172 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<Wix xmlns="http://schemas.microsoft.com/wix/2006/wi" xmlns:util="http://schemas.microsoft.com/wix/UtilExtension">
-	<Product Name="WavemeterServiceInstaller" Id="5147C23F-A00C-4766-80E9-CFB70BD8D8BE"  UpgradeCode="8FD957D3-8B46-482B-A042-60B4B25E549D" Language="1033" Version="0.1.0.0" Manufacturer="MMazzanti">
-		<Package Id='*' Keywords='Installer'  Description="Wavemeter Service Installer" InstallerVersion="200" Compressed="yes" InstallScope="perMachine" />
+<?xml version='1.0' encoding='Windows-1252'?>
+<Wix xmlns='http://schemas.microsoft.com/wix/2006/wi'>
+  <Product Name='WavemeterService' Id='4DCBB9B4-7F4D-442B-B889-7FE34E642EBB' UpgradeCode='A2CEB863-F7AF-496F-864A-89479CBA510C'
+    Language='1033' Codepage='1252' Version='1.0.0' Manufacturer='Matteo Mazzanti'>
 
-		<MajorUpgrade DowngradeErrorMessage="A newer version of [ProductName] is already installed." />
-		<MediaTemplate />
+    <Package Id='*' Keywords='Installer' Description="WavemeterService 1.0 Installer"
+      Comments='WavemeterService has been developed by Matteo Mazzanti' Manufacturer='Matteo Mazzanti'
+      InstallerVersion='100' Languages='1033' Compressed='yes' SummaryCodepage='1252' />
+
+    <Media Id='1' Cabinet='Sample.cab' EmbedCab='yes' DiskPrompt="CD-ROM #1" />
+    <Property Id='DiskPrompt' Value="Wavemeter Service installation [1]" />
+
+    <Directory Id='TARGETDIR' Name='SourceDir'>
+      <Directory Id='ProgramFilesFolder' Name='PFiles'>
+        <Directory Id='MMazzanti' Name='MMazzanti'>
+          <Directory Id='INSTALLDIR1' Name='Wavemeter Service Manager'>
+            <Component Id='MainExecutableManager' Guid='034123FA-E1D8-47F6-95C0-251A3D6784E8'>
+              <File Id='WMServiceManager' Name='Wavemeter SVC Manager.exe' DiskId='1' Source='..\Wavemeter SVC Manager\bin\Debug\Wavemeter SVC Manager.exe' KeyPath='yes'>
+                <Shortcut Id="WavemeterServiceManagerLINK" Directory="ProgramMenuDir" Name="WavemeterServiceManager" WorkingDirectory='INSTALLDIR1' Icon="WavemeterSVC.ico" IconIndex="0" Advertise="yes" />
+              </File>
+            </Component>
+            <Component Id='MainExecutableManagerCNF' Guid='69B15A2B-028C-4810-9383-D85F02E07814'>
+              <File Id='WMServiceManagerCNF' Name='Wavemeter SVC Manager.exe.config' DiskId='1' Source='..\Wavemeter SVC Manager\bin\Debug\Wavemeter SVC Manager.exe.config' KeyPath='yes'/>
+            </Component>
+          </Directory>
+          <Directory Id='INSTALLDIR' Name='Wavemeter Service'>
+              <Component Id='MainExecutableCNF' Guid='ADE7A0D6-072D-411E-978B-AC5029A1614D'>
+                <File Id='WMServiceCNF' Name='WavemeterService.exe.config' DiskId='1' Source='..\WavemeterService\bin\Debug\WavemeterService.exe.config' KeyPath='yes'>
+                </File>
+            </Component>
+            
+            <Directory Id='LibDir' Name='lib'>
+            <Component Id='HelperLibrary' Guid='CBE59411-C6C6-496E-8B72-FD3AE9ED1B79'>
+              <File Id='JsonDLL' Name='Newtonsoft.Json.dll' DiskId='1' Source='..\WavemeterService\bin\Debug\lib\Newtonsoft.Json.dll' KeyPath='yes' />
+            </Component>
+            <Component Id='XMlDll' Guid='E38F8BAB-1207-44F3-ACBF-5438C6DF49C7'>
+              <File Id='JsonDLLXML' Name='Newtonsoft.Json.xml' DiskId='1' Source='..\WavemeterService\bin\Debug\lib\Newtonsoft.Json.xml' KeyPath='yes' />
+              <!--<File Id='Manual' Name='Manual.pdf' DiskId='1' Source='Manual.pdf' KeyPath='yes'>
+                <Shortcut Id="startmenuManual" Directory="ProgramMenuDir" Name="Instruction Manual" Advertise="yes" />
+              </File>-->
+            </Component>
+              <Component Id='WMDll' Guid='339C5EF8-4C0E-4A7A-A159-2A329A44F2CC'>
+                <File Id='WavemeterDllFile' Name='wlmData.dll' DiskId='1' Source='..\WavemeterService\bin\Debug\lib\wlmData.dll' KeyPath='yes'  />
+              </Component>
+            </Directory>
+            <Component Id='MainExecutable' Guid='AA74CF76-F0D0-4684-9225-D36D64843AF9'>
+              <File Id='WMService' Name='WavemeterService.exe' DiskId='1' Source='..\WavemeterService\bin\Debug\WavemeterService.exe' KeyPath='yes'>
+                <!--<Shortcut Id="WavemeterServiceStart" Directory="ProgramMenuDir" Name="WavemeterService" WorkingDirectory='INSTALLDIR' Icon="Icon.ico" IconIndex="0" Advertise="yes" />
+                <Shortcut Id="WavemeterServiceDesktop" Directory="DesktopFolder" Name="WavemeterService" WorkingDirectory='INSTALLDIR' Icon="Icon.ico" IconIndex="0" Advertise="yes" />-->
+              </File>
+              <ServiceInstall Id="ServiceInstaller"
+                                Type="ownProcess"
+                                Name="WavemeterService"
+                                DisplayName="Wavemeter Service"
+                                Description="A service for sharing the wavemeter data"
+                                Start="auto"
+                                ErrorControl="normal"
+                                Account="LocalSystem"/>
+              <!-- FOR ME OF THE FUTURE! Change wait yes here-->
+              <ServiceControl Id="StartService" Start="install" Stop="both" Remove="uninstall" Name="WavemeterService" Wait="no" />
+            </Component>
+
+          </Directory>
+        </Directory>
+      </Directory>
+
+      <Directory Id="ProgramMenuFolder" Name="Programs">
+        <Directory Id="ProgramMenuDir" Name="WavemeterService">
+          <Component Id="ProgramMenuDir" Guid="CD26F69D-0BE8-4E81-BA71-2392062575BF">
+            <RemoveFolder Id='ProgramMenuDir' On='uninstall' />
+            <RegistryValue Root='HKCU' Key='Software\[Manufacturer]\[ProductName]' Type='string' Value='' KeyPath='yes' />
+          </Component>
+        </Directory>
+      </Directory>
+
+      <Directory Id="DesktopFolder" Name="Desktop" />
+    </Directory>
+
+    <!-- <Feature Title='AllFeatures' Description ='Installation modes' TypicalDefault ='install' Id="InstallFeats" Level="4" ConfigurableDirectory='INSTALLDIR' Display='expand' AllowAdvertise='no'>-->
+
+
+
+      <!-- Feature is installed by default -->
+      <Feature Title='Wavemeter Service' Description ='Full installer without Wavemeter Dll' Id="NoInstallWMDll" Level="1" AllowAdvertise="no" ConfigurableDirectory="INSTALLDIR">
+        <ComponentRef Id='MainExecutable' />
+        <ComponentRef Id='HelperLibrary' />
+        <ComponentRef Id='MainExecutableCNF' />
+        <ComponentRef Id='ProgramMenuDir' />
+        <ComponentRef Id='XMlDll' />
+        
+        <!--<ComponentRef Id='WMDll' />-->
+      </Feature>
+    <Feature Title='Wavemeter Service Manager' Description ='Wavemeter Service Manager' Id="WMSVCManager" Level="1" AllowAdvertise="no" ConfigurableDirectory="INSTALLDIR1">
+      <ComponentRef Id='MainExecutableManager' />
+      <ComponentRef Id='MainExecutableManagerCNF' />
+    </Feature>
+      
+      <!-- Feature is not installed by default -->
+    <Feature Title='Wavemeter Dll' Description ='Wavemter Dll. Do not install on the wavemeter PC, this is already included in System32 folder by the wavemeter software' TypicalDefault ='install' Id='InstallWMDll' Level='1000' AllowAdvertise='no' ConfigurableDirectory='INSTALLDIR'>
+      <ComponentRef Id='WMDll' />
+    </Feature>
+    <!--</Feature>-->
+
+
+    <UIRef Id="WixUI_Mondo" />
+    <UIRef Id="WixUI_ErrorProgressText" />
+    
+    <!-- <Icon Id="WavemeterService.exe" SourceFile="icon.ico" />-->
+    <Icon Id="Icon.ico" SourceFile="..\Icons\Icon.ico"/>
+    <Icon Id="WavemeterSVC.ico" SourceFile="..\Icons\WavemeterSVC.ico"/>
+    <Property Id="ARPPRODUCTICON" Value="icon.ico" />
+    <WixVariable Id="WixUILicenseRtf" Value="License.rtf" />
+    <WixVariable Id="WixUIBannerBmp" Value="..\Icons\Banner.png" />
+    <WixVariable Id="WixUIDialogBmp" Value="..\Icons\BannerDialog.png" />
+  </Product>
+</Wix>
+
+
+
+<!-- <MediaTemplate />
+    
+    
 
 		<Feature Id="ProductFeature" Title="WavemeterServiceInstaller" Level="1">
-			<ComponentGroupRef Id="ProductComponents" />
+			<ComponentGroupRef Id="ProductComponent" />
 		</Feature>
+    
+    <Feature Id="ServiceDllFeature" Title="WavemeterServiceDll" Level="1">
+      <ComponentGroupRef Id="ServiceDllFolder" />
+    </Feature>
+    
     <Icon Id="Icon.ico" SourceFile="..\WavemeterService\Icon.ico"/>
     <Property Id="ARPPRODUCTICON" Value="icon.ico" />
 	</Product>
 
 	<Fragment>
+    <Directory Id="TARGETDIR" Name="SourceDir">
+      <Directory Id="ProgramFilesFolder">
+        <Directory Id="DllFolder" Name="lib">
+          <Component Id="Dlls" Guid="813F76D9-971C-4ECB-9518-A12971714C68"
+            SharedDllRefCount="no" KeyPath="no" NeverOverwrite="no" Permanent="no" Transitive="no"
+            Win64="no" Location="either">
+            <CreateFolder/>
+          </Component>
+        </Directory>
+      </Directory>
+    </Directory>
+    
+    
 		<Directory Id="TARGETDIR" Name="SourceDir">
 			<Directory Id="ProgramFilesFolder">
 				<Directory Id="INSTALLFOLDER" Name="WavemeterService" />
+          <Directory Id="BinFolder" Name="bin">
+          
+        </Directory>
 			</Directory>
 		</Directory>
   </Fragment>
   
 
 	<Fragment>
-		<ComponentGroup Id="ProductComponents" Directory="INSTALLFOLDER">
+		<ComponentGroup Id="ProductComponent" Directory="BinFolder">
+      <Component Id="Dlls" Guid="B8237C72-97E6-4685-8CB2-366D20FF546F">
+        <RemoveFolder Id='ProgramMenuDir' On='uninstall' />
+        <File Id='JsonDLL' Name='Newtonsoft.Json.dll' DiskId='1' Vital='yes' Source='..\WavemeterService\bin\Debug\lib\Newtonsoft.Json.dll' KeyPath='yes'>
+        </File>
+      </Component>
+      
+      
       <Component Id='MainExecutable' Guid='00CECED1-FBE6-47A7-89FC-9236A421415B'>
         <RemoveFolder Id='ProgramMenuDir' On='uninstall' />
         <File Id='WavemeterService' Name='WavemeterService.exe' DiskId='1' Vital='yes' Source='..\WavemeterService\bin\Debug\WavemeterService.exe' KeyPath='yes'>
@@ -38,10 +181,17 @@
                                 Account="LocalSystem"/>
         <ServiceControl Id="StartService" Start="install" Stop="both" Remove="uninstall" Name="WavemeterService" Wait="yes" />
       </Component>
-			<!-- TODO: Remove the comments around this Component element and the ComponentRef below in order to add resources to this installer. -->
+      
+      <Component Id='JsonDLL' Guid='B8237C72-97E6-4685-8CB2-366D20FF546F'>
+        <RemoveFolder Id='ProgramMenuDir' On='uninstall' />
+        <File Id='JsonDLL' Name='Newtonsoft.Json.dll' DiskId='1' Vital='yes' Source='..\WavemeterService\bin\Debug\lib\Newtonsoft.Json.dll' KeyPath='yes'>
+        </File>
+
+      </Component>
+			 TODO: Remove the comments around this Component element and the ComponentRef below in order to add resources to this installer. -->
 			<!-- <Component Id="ProductComponent"> -->
 				<!-- TODO: Insert files, registry keys, and other resources here. -->
-			<!-- </Component> -->
-		</ComponentGroup>
-	</Fragment>
-</Wix>
+			<!-- </Component>
+      </ComponentGroup>
+    </Fragment>
+</Wix>-->
